--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "firebase": "^8.1.2",
+    "firebaseui": "^4.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuefire": "^2.2.5",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
