--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "bcryptjs": "^2.4.3",
     "core-js": "^3.6.5",
     "firebase": "^8.1.2",
     "firebaseui": "^4.7.1",
