--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,8 @@
     "vue-router": "^3.2.0",
     "vuefire": "^2.2.5",
     "vuetify": "^2.2.11",
-    "vuex": "^3.6.0"
+    "vuex": "^3.6.0",
+    "vuexfire": "^3.2.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
