--- a/app/package.json
+++ b/app/package.json
@@ -8,12 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "browser-image-compression": "^1.0.14",
     "core-js": "^3.6.5",
     "firebase": "^8.1.2",
     "firebaseui": "^4.7.1",
+    "luxon": "^1.25.0",
     "showdown": "^1.9.1",
+    "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuefire": "^2.2.5",
